<resources>
    <string name="app_name">PTTextView.SampleApp</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="pt_sans_regular">PT Sans Regular</string>
    <string name="pt_sans_bold">PT Sans Bold</string>
    <string name="pt_sans_italic">PT Sans Italic</string>
    <string name="pt_sans_bold_italic">PT Sans Bold Italic</string>
    <string name="pt_sans_narrow">PT Sans Narrow Regular</string>
    <string name="pt_sans_narrow_bold">PT Sans Narrow Bold</string>
    <string name="pt_sans_caption_regular">PT Sans Caption Regular</string>
    <string name="pt_sans_caption_bold">PT Sans Caption Bold</string>
    <string name="pt_serif_regular">PT Serif Regular</string>
    <string name="pt_serif_bold">PT Serif Bold</string>
    <string name="pt_serif_italic">PT Serif Italic</string>
    <string name="pt_serif_bold_italic">PT Serif Bold Italic</string>
    <string name="pt_serif_caption_regular">PT Serif Caption Regular</string>
    <string name="pt_serif_caption_italic">PT Serif Caption Italic</string>
    <string name="pt_mono_regular">PT Mono Regular</string>
    <string name="pt_mono_bold">PT Mono Bold</string>
    <string name="title_activity_sample">SampleActivity</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="choose_the_size">TextSize</string>

    <string-array name="textSizes">
        <item>12sp</item>
        <item>14sp</item>
        <item>16sp</item>
        <item>18sp</item>
        <item>20sp</item>
        <item>22sp</item>
        <item>24sp</item>
        <item>26sp</item>
        <item>28sp</item>
        <item>30sp</item>
        <item>32sp</item>
        <item>34sp</item>
        <item>36sp</item>
        <item>38sp</item>
        <item>40sp</item>
        <item>42sp</item>
        <item>44sp</item>
        <item>46sp</item>
        <item>48sp</item>
        <item>50sp</item>
        <item>52sp</item>
        <item>54sp</item>
        <item>56sp</item>
    </string-array>

</resources>
